updating services