@@ -7,12 +7,13 @@ import com.cch.mappers.TeamMapper;
 import com.cch.repositories.TeamRepository;
 import com.cch.services.TeamService;
 import jakarta.persistence.EntityNotFoundException;
+import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
+@Service
 @Transactional
 public class TeamServiceImpl implements TeamService {
 
@@ -26,24 +27,29 @@ public class TeamServiceImpl implements TeamService {
 
     @Override
     public TeamResponseDTO save(TeamRequestDTO teamRequestDTO) {
+        if (teamRepository.existsByTeam(teamRequestDTO.team())) {
+            throw new IllegalArgumentException("Le nom de l'équipe doit être unique !");
+        }
+
         Team team = teamMapper.toEntity(teamRequestDTO);
         Team savedTeam = teamRepository.save(team);
         return teamMapper.toResponseDto(savedTeam);
     }
 
     @Override
-    @Transactional(readOnly = true)
     public Optional<TeamResponseDTO> getById(Long id) {
+        if (!teamRepository.existsById(id)) {
+            throw new EntityNotFoundException("Team with ID " + id + " not found");
+        }
         return teamRepository.findById(id)
                 .map(teamMapper::toResponseDto);
     }
 
     @Override
-    @Transactional(readOnly = true)
     public List<TeamResponseDTO> getAll() {
         return teamRepository.findAll().stream()
                 .map(teamMapper::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -51,11 +57,13 @@ public class TeamServiceImpl implements TeamService {
         Team existingTeam = teamRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Team with ID " + id + " not found"));
 
-        Team updatedTeam = teamMapper.toEntity(teamRequestDTO);
-        updatedTeam.setId(existingTeam.getId());
+        if (teamRepository.existsByTeam(teamRequestDTO.team())) {
+            throw new IllegalArgumentException("Le nom de l'équipe doit être unique !");
+        }
 
-        Team savedTeam = teamRepository.save(updatedTeam);
-        return teamMapper.toResponseDto(savedTeam);
+        existingTeam.setTeam(teamRequestDTO.team());
+        Team updatedTeam = teamRepository.save(existingTeam);
+        return teamMapper.toResponseDto(updatedTeam);
     }
 
     @Override
@@ -66,9 +74,4 @@ public class TeamServiceImpl implements TeamService {
         teamRepository.deleteById(id);
     }
 
-    @Override
-    @Transactional(readOnly = true)
-    public TeamResponseDTO findByTeamName(String teamName) {
-        return teamMapper.toResponseDto(teamRepository.findByTeam(teamName));
-    }
 }
